Site URL in CMS

--- a/package.json
+++ b/package.json
@@ -8,17 +8,16 @@
     "node": "^18.17.1 || ^20.3.0 || >= 21.0.0"
   },
   "scripts": {
-    "predev:assessments": "npm run prepare:assessments && kill-port 4321 8081",
+    "predev:assessments": "cross-env ASSESSMENTS_URL=http://localhost:4321 ADHD_URL=http://localhost:4321 AUTISM_URL=http://localhost:4321 WEBSITE_ID=assessments node scripts/generate-cms-config.js && kill-port 4321 8081",
     "dev:assessments": "cross-env WEBSITE_ID=assessments npm run _dev:with-cms",
-    "predev:adhd": "npm run prepare:adhd && kill-port 4321 8081",
+    "predev:adhd": "cross-env ASSESSMENTS_URL=http://localhost:4321 ADHD_URL=http://localhost:4321 AUTISM_URL=http://localhost:4321 WEBSITE_ID=adhd node scripts/generate-cms-config.js && kill-port 4321 8081",
     "dev:adhd": "cross-env WEBSITE_ID=adhd npm run _dev:with-cms",
-    "predev:autism": "npm run prepare:autism && kill-port 4321 8081",
+    "predev:autism": "cross-env ASSESSMENTS_URL=http://localhost:4321 ADHD_URL=http://localhost:4321 AUTISM_URL=http://localhost:4321 WEBSITE_ID=autism node scripts/generate-cms-config.js && kill-port 4321 8081",
     "dev:autism": "cross-env WEBSITE_ID=autism npm run _dev:with-cms",
     "_dev:with-cms": "cross-env ASSESSMENTS_URL=http://localhost:4321 ADHD_URL=http://localhost:4321 AUTISM_URL=http://localhost:4321 concurrently -k --success first --handle-input \"npx decap-server\" \"astro dev --host\"",
-    "prepare:assessments": "cross-env WEBSITE_ID=assessments npm run _prepare:cms-config",
-    "prepare:adhd": "cross-env WEBSITE_ID=adhd npm run _prepare:cms-config",
-    "prepare:autism": "cross-env WEBSITE_ID=autism npm run _prepare:cms-config",
-    "_prepare:cms-config": "cross-env ASSESSMENTS_URL=http://localhost:4321 ADHD_URL=http://localhost:4321 AUTISM_URL=http://localhost:4321 node scripts/generate-cms-config.js",
+    "prepare:assessments": "cross-env WEBSITE_ID=assessments node scripts/generate-cms-config.js",
+    "prepare:adhd": "cross-env WEBSITE_ID=adhd node scripts/generate-cms-config.js",
+    "prepare:autism": "cross-env WEBSITE_ID=autism node scripts/generate-cms-config.js",
     "prebuild:assessments": "npm run prepare:assessments",
     "build:assessments": "cross-env WEBSITE_ID=assessments astro build",
     "prebuild:adhd": "npm run prepare:adhd",
@@ -30,7 +29,7 @@
     "astro": "astro",
     "precommit": "npm run fix && npm run check:astro",
     "check": "npm run check:astro && npm run check:eslint && npm run check:prettier",
-    "check:astro": "cross-env WEBSITE_ID=assessments ASSESSMENTS_URL=http://localhost:4321 ADHD_URL=http://localhost:4321 AUTISM_URL=http://localhost:4321 astro check",
+    "check:astro": "cross-env WEBSITE_ID=assessments astro check",
     "check:eslint": "eslint .",
     "check:prettier": "prettier --check .",
     "fix": "npm run fix:eslint && npm run fix:prettier",
