--- a/public/admin/config.template.yml
+++ b/public/admin/config.template.yml
@@ -16,6 +16,7 @@
 #   {{MEDIA_FOLDER}} - Site-specific media path
 #   {{PUBLIC_FOLDER}} - Site-specific public path
 #   {{SITE_URL}} - Site-specific URL
+#   {{LOCAL_BACKEND}} - true for local dev, false for production
 # ============================================================================
 
 backend:
@@ -29,7 +30,7 @@ backend:
     uploadMedia: 'feat(media/{{WEBSITE_ID}}): Upload "{{path}}"'
     deleteMedia: 'feat(media/{{WEBSITE_ID}}): Delete "{{path}}"'
 publish_mode: editorial_workflow
-local_backend: true
+local_backend: {{LOCAL_BACKEND}}
 media_folder: {{MEDIA_FOLDER}}
 public_folder: {{PUBLIC_FOLDER}}
 site_url: {{SITE_URL}}
