--- a/src/content/adhd/site-settings.yaml
+++ b/src/content/adhd/site-settings.yaml
@@ -11,3 +11,13 @@ footer:
   title: Together ADHD
   business_info: Sole trader, trading as Together ADHD. North Lincolnshire and
     surrounding areas.
+
+seo:
+  title_default: "Together ADHD Assessments"
+  title_template: "%s — Together ADHD Assessments"
+  description: "ADHD assessments for adults in the UK. Professional neurodiversity assessment services for North Lincolnshire and surrounding areas."
+  robots_index: false
+  robots_follow: true
+
+analytics:
+  ga4_id: ""
