--- a/package.json
+++ b/package.json
@@ -25,6 +25,9 @@
     "prebuild:autism": "npm run prepare:autism",
     "build:autism": "cross-env WEBSITE_ID=autism astro build",
     "build:icon-data": "node scripts/build-icon-data.js",
+    "lighthouse": "npm run build:assessments && node scripts/lighthouse.js --mobile",
+    "lighthouse:mobile": "npm run build:assessments && node scripts/lighthouse.js --mobile",
+    "lighthouse:desktop": "npm run build:assessments && node scripts/lighthouse.js --desktop",
     "preview": "astro preview",
     "astro": "astro",
     "precommit": "npm run fix && npm run check:astro",
@@ -66,6 +69,7 @@
     "@typescript-eslint/parser": "^8.39.0",
     "astro-compress": "2.3.8",
     "astro-eslint-parser": "^1.2.2",
+    "chalk": "^5.6.2",
     "concurrently": "^8.2.2",
     "cross-env": "^10.1.0",
     "decap-server": "^3.3.1",
@@ -75,10 +79,13 @@
     "husky": "^9.1.7",
     "js-yaml": "^4.1.0",
     "kill-port": "^2.0.1",
+    "lighthouse": "^12.8.2",
     "mdast-util-to-string": "^4.0.0",
     "prettier": "^3.6.2",
     "prettier-plugin-astro": "^0.14.1",
+    "puppeteer-core": "^24.25.0",
     "reading-time": "^1.5.0",
+    "serve": "^14.2.5",
     "sharp": "0.34.3",
     "tailwind-merge": "^2.6.0",
     "tailwindcss": "^3.4.17",
