--- a/src/content/assessments/site-settings.yaml
+++ b/src/content/assessments/site-settings.yaml
@@ -17,7 +17,7 @@ seo:
   title_default: "Together Assessments"
   title_template: "%s — Together Assessments"
   description: "Professional neurodiversity assessments for adults in the UK. ADHD and autism assessments for North Lincolnshire and surrounding areas."
-  robots_index: false
+  robots_index: true
   robots_follow: true
 
 analytics:
