--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "node": "^18.17.1 || ^20.3.0 || >= 21.0.0"
   },
   "scripts": {
+    "dev": "npm run dev:assessments",
     "predev:assessments": "cross-env ASSESSMENTS_URL=http://localhost:4321 ADHD_URL=http://localhost:4321 AUTISM_URL=http://localhost:4321 WEBSITE_ID=assessments node scripts/generate-cms-config.js && kill-port 4321 8081",
     "dev:assessments": "cross-env WEBSITE_ID=assessments npm run _dev:with-cms",
     "predev:adhd": "cross-env ASSESSMENTS_URL=http://localhost:4321 ADHD_URL=http://localhost:4321 AUTISM_URL=http://localhost:4321 WEBSITE_ID=adhd node scripts/generate-cms-config.js && kill-port 4321 8081",
