--- a/src/content/assessments/site-settings.yaml
+++ b/src/content/assessments/site-settings.yaml
@@ -19,6 +19,15 @@ seo:
   description: "Professional neurodiversity assessments for adults in the UK. ADHD and autism assessments for North Lincolnshire and surrounding areas."
   robots_index: false
   robots_follow: true
+  area_served: "North Lincolnshire"
+  social:
+    linkedin: ""
+    twitter: ""
+    facebook: ""
+  business:
+    founding_date: ""
+    legal_name: ""
+    vat_id: ""
 
 analytics:
   ga4_id: ""
