--- a/src/content/assessments/services-page/top-content.yaml
+++ b/src/content/assessments/services-page/top-content.yaml
@@ -1,4 +1,8 @@
 title: Services
-subheading: ''
-image: ''
+subheading: ""
+image: ""
 body: Some content
+catalogue_info:
+  name: ADHD and Autism Assessment Services
+  description: Comprehensive diagnostic assessments for adults by qualified
+    practitioners specialising in neurodiversity.
