Bug: missing mandatories for 2 sites

--- a/src/content/autism/home-page/content.yaml
+++ b/src/content/autism/home-page/content.yaml
@@ -1,5 +1,6 @@
 hero:
   image: ~/assets/images/autism/pexels-shvets-production-7176297.jpg
+  image_alt: Specialist neurodiversity assessment service
   text: For adults in North Lincolnshire (online UK‑wide available)
   title: Specialist neurodiversity assessments & formulations.
   subtitle: Independent, friendly, evidence‑based. Clear recommendations you can act on.
